agregado categorias / borrado archivos no usados

--- a/vite-project/src/components/ItemListContainer/ItemList.css
+++ b/vite-project/src/components/ItemListContainer/ItemList.css
@@ -10,6 +10,7 @@
   }
   
   .card {
+    text-align: center;
     flex: 0 0 calc(33.33% - 16px); 
     max-width: calc(33.33% - 16px); 
     border: 1px solid #f758d4;
