--- a/vite-project/src/components/ItemListContainer/ItemList.css
+++ b/vite-project/src/components/ItemListContainer/ItemList.css
@@ -7,17 +7,36 @@
   .titulo {
     text-align: center;
     width: 100%; 
+    font-size: 24px; 
+    font-weight: bold; 
+    color: #333; 
+    margin-bottom: 10px; 
   }
   
   .card {
     text-align: center;
     flex: 0 0 calc(33.33% - 16px); 
     max-width: calc(33.33% - 16px); 
-    border: 1px solid #f758d4;
-    background-color: #ffc8f3;
+    color:#000000;
+    border: 1px solid #000000;
+    background-color: #f3efef;
     border-radius: 8px;
     padding: 16px;
     margin: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     box-sizing: border-box; 
+    margin: 0 auto;
   }
+  .card img {
+    display: block;
+    margin: 0 auto;
+  }
+  .verMas
+  {
+    display:block;
+    padding:3px;
+    color:#ffffff;
+    background-color:#000000;
+    margin: 0 auto;
+  }
+  
